Working stream/thread distributor
Add pointee placeholder

New block consistency approach

Exclude _weft args from kernel parser (needs backend update)

Add block destructor

Refactor, add scheduler + stream/thread executor

Update cmakelist

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(backend OBJECT
   device.cc
   kernel.cc
   memory.cc
+  scheduler.cc
   server.cc)
 target_include_directories(backend PUBLIC
   Boost_INCLUDE_DIRS
